# pdf2word

./: .gitignore  LICENSE  README.md  README_EN.md  Survey.docx  main.py  pyproject.toml  ~$Survey.docx
input/: .gitkeep
output/: .gitkeep
src/pdf2word/: __init__.py  __main__.py  converter.py  main.py  utils.py
