[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2word"
version = "2.0.0"
description = "PDF to Word Document Converter with batch processing and multi-threading support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "dpviivqb"},
]
license = {text = "MIT"}
keywords = ["pdf", "word", "converter", "batch", "docx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
dependencies = [
    "pdf2docx>=0.5.8",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/dpviivqb/pdf2word"
Repository = "https://github.com/dpviivqb/pdf2word.git"
Issues = "https://github.com/dpviivqb/pdf2word/issues"

[project.scripts]
pdf2word = "pdf2word.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2word"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/README_EN.md", 
    "/LICENSE",
]

[tool.hatch.metadata]
allow-direct-references = true
